--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -20,6 +20,7 @@ ro:
   profile:
     account: Profil
     sign_in: Conecteaza-te
+    sign_out: Deconecteaza-te
     lang_theme: Limba & Afisare
     settings: Setari
     language: Limba
