--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,7 +88,8 @@ en:
     lname: Last Name
     dob: Date of birth
   settings:
-    public: Public
+    public: General
     activity: Activity
     pass_and_auth: Password and authentication
     billing: Billing and payments
+    save: Save
